# krakatoa

./: Cargo.toml  README.md  vkvia.html
shaders/: shader.frag  shader.vert
src/: buffer.rs  camera.rs  debug.rs  krakatoa.rs  lib.rs  main.rs  model.rs  pipeline.rs  pools.rs  queue.rs  surface.rs  swapchain.rs
src/camera/: camera.rs  camera_builder.rs  mod.rs
src/model/: instance.rs  mod.rs  model.rs  vertex.rs
