[package]
name = "krakatoa"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true

[dependencies]
ash = { version = "0.37.3", default-features = false, features = [
    "linked",
    "debug",
] }
ash-window = "0.12.0"
winit = "0.28.0"
raw-window-handle = "0.5"
anyhow = "1.0.75"
vk-shader-macros = "0.2.9"
nalgebra = "0.32.3"
